<resources>
    <string name="app_name">Pokemon App</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="search_hint">Search</string>
    <string name="pokemon">Pokemon</string>
    <string name="pokemon_detail">Pokemon Detail</string>
    <string name="pokemon_image">Pokemon Image</string>
    <string name="notification_title">PokemonApp</string>
    <string name="cancel_download">Cancel</string>
    <string name="no_results">No Results…</string>
    <string name="app_toolbar_header">Header image</string>
    <string name="pokemonId">%d</string>
    <string name="pokemonHashId"># %d</string>
    <string name="pokemon_id_label">#</string>
    <string name="filter">filter</string>
    <string name="moves_label">Moves</string>
    <string name="pok_dex">Pokédex</string>
    <string name="pok_dex_gen">Pokédex: %s</string>
    <string name="pok_dex_gen_label">Pokédex:</string>
    <string name="pok_dex_entry">Pokédex Entry</string>
    <string name="weight">%.2f kg</string>
    <string name="weight_label">Weight :</string>
    <string name="height">%.2f cm</string>
    <string name="height_label">Height :"</string>
    <string name="generation">Gen</string>
    <string name="generation_label">Generation :</string>
    <string name="habitat">%s</string>
    <string name="habitat_label">Habitat :</string>
    <string name="shape_text">%s</string>
    <string name="shape_label">Shape :</string>
    <string name="form_text">%s</string>
    <string name="form_label">Form :</string>
    <string name="effect_label">Effect :</string>
    <string name="title">Title</string>
    <string name="subtitle">Subtitle</string>
    <string name="pokemon_name">pokemon_name</string>
    <string name="about">About</string>
    <string name="intro_image">Intro image</string>
    <string name="transition_name">pokemon_%d_image</string>
    <string name="filter_pokemon_label">Filter Pokemon</string>
    <string name="species">Species</string>
    <string name="adaptive_height_scroll_view_behavior" translatable="false">com.sealstudios.pokemonApp.ui.util.AdaptiveHeightScrollingViewBehaviour</string>
    <string name="error_text">Oops that\'s an error… 🤔</string>
    <string name="retry">Retry</string>
    <string name="no_moves">No moves data… 🤔</string>
    <string name="no_base_stats">No base stats data… 🤔</string>
    <string name="no_weakness_resistance">No weakness and resistance data… 🤔</string>
    <string name="abilities_empty">No abilities data… 🤔</string>
    <string name="show_less">Show less</string>
    <string name="show_more">Show more</string>
    <string name="learnt_by">Learnt by: %s</string>
    <string name="learned_at_level">Learned at level: %s</string>
    <string name="move_accuracy">%d\%%</string>
    <string name="move_category">Move category</string>
    <string name="move_type">Move type</string>
    <string name="move_description">Description :</string>
    <string name="power_label">Power :</string>
    <string name="accuracy_label">Accuracy :</string>
    <string name="pp_label">PP :</string>
    <string name="learned_at_level_label">Lvl</string>
    <string name="learnt_by_label">Method</string>
    <string name="learning">Learning</string>
    <string name="ad_attribution">Ad</string>
    <string name="ad_image">Ad image</string>
    <string name="abilities">Abilities</string>
    <string name="version_label">Version :</string>
    <string name="name">Name :</string>
    <string name="short_effect_label">Short effect :</string>
    <string name="move_description_label">Description :</string>
    <string name="hidden_ability">Hidden Ability : %s</string>
    <string name="main_series_label">Main series :</string>
    <string name="effect_change_label">Effect change :</string>
    <string name="AD_MOB_AD_UNIT_ID">ca-app-pub-3940256099942544~3347511713</string>
    <string name="AD_MOB_SAMPLE_AD_UNIT_ID">ca-app-pub-3940256099942544/2247696110</string>
    <string name="base_stats">Base Stats</string>
    <string name="total_stats">Total : %s</string>
    <string name="hp">HP</string>
    <string name="attack_text">Att</string>
    <string name="defence_text">Def</string>
    <string name="speed_text">Spd</string>
    <string name="special_attack_text">Sp-Att</string>
    <string name="special_defence_text">Sp-Def</string>
    <string name="base_stats_total">Total : %d</string>
    <string name="splash_anim">Splash animation image</string>
    <string name="close_filters">Close filters</string>
    <string name="loading_image">Image loading</string>
    <string name="weakness_resistance">Weakness And Resistance</string>
    <string name="type_resistance">type resistance</string>
    <string name="multiplier">%sx</string>
    <string name="info">INFO</string>
    <string name="stats">STATS</string>
    <string name="moves">MOVES</string>
    <string name="search">Search</string>
    <string name="clear_filters">CLEAR FILTERS</string>
    <string name="play_store_link">https://play.google.com/store/apps/details?id=%s</string>
    <string name="share_via">Share link via</string>
    <string name="share_title">Checkout PokeApp</string>
    <string name="my_email">Martinseal1987@gmail.com</string>
    <string name="feedback">Feedback</string>
    <string name="licences">Licences</string>
    <string name="scroll_bar">scroll bar</string>
    <string name="about_text">Thanks for using the PokeApp 😁, this app is not affiliated with the Pokemon company.</string>
    <string name="fair_use">Fair Use Disclaimer. \nWe may use copyrighted material which has not always been specifically authorized by the copyright owner.
        \nThe Company is making such material available for criticism, comment, news reporting, teaching, scholarship, or research.
        \nThe Company believes this constitutes a \"fair use\" of any such copyrighted material as provided for in section 107 of the United States Copyright law.
        \n\nIf You wish to use copyrighted material from the Service for your own purposes that go beyond fair use, You must obtain permission from the copyright owner.</string>
    <string name="fair_use_label">Fair Use</string>
    <string name="arc_animator_title">ArcAnimator</string>
    <string name="arc_animator_publisher">Asylbek Isakov</string>
    <string name="arc_animator_licence">
        The MIT License (MIT)
        Copyright © 2015 Asylbek Isakov

        Permission is hereby granted, free of charge, to any person obtaining a cop
        of this software and associated documentation files (the "Software"), to dea
        in the Software without restriction, including without limitation the right
        to use, copy, modify, merge, publish, distribute, sublicense, and/or sel
        copies of the Software, and to permit persons to whom the Software i
        furnished to do so, subject to the following conditions:

        The above copyright notice and this permission notice shall be included in
        all copies or substantial portions of the Software.
        THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
        IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
        FITNESS FOR A PARTICULAR PURPOSE AND NONINFINGEMENT. IN NO EVENT SHALL THE
        AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
        LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
        OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
        THE SOFTWARE.</string>
    <string name="retrofit_title">Retrofit</string>
    <string name="retrofit_publisher">Square, Inc</string>
    <string name="retrofit_licence">
        Copyright 2013 Square, Inc.

        Licensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at
        http://www.apache.org/licenses/LICENSE-2.0
        Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.
    </string>
    <string name="okhttp_title">OkHttp</string>
    <string name="okhttp_licence">
        Copyright 2019 Square, Inc.

        Licensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at
        http://www.apache.org/licenses/LICENSE-2.0
        Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.
    </string>
    <string name="glide_title">Glide</string>
    <string name="glide_publisher">Bumptech</string>
</resources>