<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/gen_cell"
        style="@style/ThemeOverlay.MySmallBodyTextBold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/generation" />

    <TextView
        android:id="@+id/learned_at_cell"
        style="@style/ThemeOverlay.MySmallBodyTextBold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textAlignment="center"
        android:text="@string/learned_at_level_label" />

    <TextView
        android:id="@+id/learn_method_cell"
        style="@style/ThemeOverlay.MySmallBodyTextBold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/learnt_by_label" />

</LinearLayout>