<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/detail_root"
    tools:context="com.sealstudios.pokemonApp.ui.PokemonDetailFragment"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/app_bar_layout"
        android:outlineProvider="none"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@android:color/transparent"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:translationZ="8dp"
        app:elevation="0dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:descendantFocusability="blocksDescendants"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed|snap">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_height="?attr/actionBarSize"
                android:layout_width="match_parent"
                android:minHeight="?attr/actionBarSize"
                android:elevation="@dimen/large_margin_32dp"
                app:elevation="@dimen/large_margin_32dp"
                app:layout_collapseMode="pin"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scroll_view"
        android:clipToPadding="false"
        android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="24dp"
        android:paddingBottom="@dimen/medium_margin_16dp"
        android:clipToPadding="false">

    <ImageView
        android:id="@+id/pokemon_image_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:elevation="@dimen/large_margin_32dp"
        android:padding="@dimen/medium_margin_16dp"
        android:clipToPadding="false"
        android:scaleType="fitCenter"
        android:clickable="false"
        android:focusable="false"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/pokemon_image" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/card_top_guide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.16" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/backing_card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="@dimen/medium_margin_16dp"
        android:elevation="@dimen/medium_margin_16dp"
        app:cardElevation="@dimen/medium_margin_16dp"
        app:layout_constraintBottom_toBottomOf="@id/content"
        app:layout_constraintEnd_toEndOf="@id/content"
        app:layout_constraintStart_toStartOf="@id/content"
        app:layout_constraintTop_toTopOf="@id/card_top_guide"
        app:layout_constraintWidth_max="500dp" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="@dimen/large_margin_32dp"
        android:layout_marginEnd="@dimen/medium_margin_16dp"
        android:layout_marginStart="@dimen/medium_margin_16dp"
        android:layout_marginBottom="@dimen/medium_margin_16dp"
        android:paddingEnd="@dimen/medium_margin_16dp"
        android:paddingStart="@dimen/medium_margin_16dp"
        android:paddingBottom="@dimen/medium_margin_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pokemon_image_view"
        app:layout_constraintWidth_max="500dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            android:paddingBottom="@dimen/small_margin_8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/id_label"/>

        <TextView
            android:id="@+id/id_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/pokemonId"
            android:gravity="end"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:paddingBottom="@dimen/small_margin_8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/subtitle"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:paddingBottom="@dimen/small_margin_8dp"
            app:layout_constraintStart_toStartOf="@id/title"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/pokemon_types_chip_group_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal"
            app:flexWrap="wrap"
            app:justifyContent="flex_end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/subtitle">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/pokemon_types_chip_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </com.google.android.flexbox.FlexboxLayout>

        <androidx.constraintlayout.widget.Barrier
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:barrierDirection="bottom"
            android:id="@+id/types_barrier"
            app:constraint_referenced_ids="subtitle,pokemon_types_chip_group_container"/>

        <TextView
            android:id="@+id/gen_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/generation"
            android:textSize="14sp"
            android:paddingTop="@dimen/small_margin_8dp"
            android:paddingBottom="@dimen/small_margin_8dp"
            android:textColor="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@id/types_barrier" />

        <TextView
            android:id="@+id/height_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/height"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:paddingBottom="@dimen/medium_margin_16dp"
            app:layout_constraintBottom_toTopOf="@id/info_divider"
            app:layout_constraintTop_toBottomOf="@id/gen_text_view"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/weight_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:paddingBottom="@dimen/medium_margin_16dp"
            android:paddingStart="@dimen/medium_margin_16dp"
            android:paddingEnd="@dimen/medium_margin_16dp"
            app:layout_constraintBottom_toTopOf="@id/info_divider"
            app:layout_constraintTop_toBottomOf="@id/gen_text_view"
            app:layout_constraintStart_toEndOf="@id/height_text_view"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:id="@+id/info_divider"
            android:background="@color/light_grey"
            app:layout_constraintTop_toBottomOf="@id/weight_text_view"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pokemon_about_label"
            android:text="@string/about"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingTop="@dimen/medium_margin_16dp"
            android:paddingBottom="@dimen/small_margin_8dp"
            app:layout_constraintTop_toBottomOf="@id/height_text_view"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/shape_text"
            android:text="@string/shape_text"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:paddingBottom="@dimen/small_margin_8dp"
            app:layout_constraintTop_toBottomOf="@id/pokemon_about_label"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/form_description_text"
            android:text="@string/form_text"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:paddingBottom="@dimen/small_margin_8dp"
            app:layout_constraintTop_toBottomOf="@id/shape_text"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/habitat_text"
            android:text="@string/habitat"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:paddingBottom="@dimen/medium_margin_16dp"
            app:layout_constraintTop_toBottomOf="@id/form_description_text"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:id="@+id/pokedex_divider"
            android:background="@color/light_grey"
            app:layout_constraintTop_toBottomOf="@id/habitat_text"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pokedex_entry_label"
            android:text="@string/pok_dex"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingTop="@dimen/medium_margin_16dp"
            android:paddingBottom="@dimen/small_margin_8dp"
            app:layout_constraintTop_toBottomOf="@id/pokedex_divider"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pokedex_subtitle"
            android:text="@string/pok_dex_gen"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:paddingBottom="@dimen/small_margin_8dp"
            app:layout_constraintTop_toBottomOf="@id/pokedex_entry_label"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pokedex_entry_text"
            android:text="@string/pok_dex_entry"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:paddingBottom="@dimen/medium_margin_16dp"
            app:layout_constraintTop_toBottomOf="@id/pokedex_subtitle"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:id="@+id/moves_divider"
            android:background="@color/light_grey"
            app:layout_constraintTop_toBottomOf="@id/pokedex_entry_text"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/moves_label"
            android:text="@string/moves_label"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingTop="@dimen/medium_margin_16dp"
            android:paddingBottom="@dimen/small_margin_8dp"
            app:layout_constraintTop_toBottomOf="@id/moves_divider"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/moves_text"
            android:text="@string/moves_label"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:paddingBottom="@dimen/small_margin_8dp"
            app:layout_constraintTop_toBottomOf="@id/moves_label"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>